--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,6 +11,7 @@ img {
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
+  font-family: 'Patua One', sans-serif;
 }
 
 figcaption {
@@ -22,6 +23,7 @@ figcaption {
 nav {
   font-size: 1.125rem;
   font-weight: bold;
+  font-family: 'Patua One', sans-serif;
 }
 
 nav ol [
