--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,8 +1,8 @@
-html [
+html {
   background-color: #f2f1ed;
-  font-family: "Patua One", sans-serif;
+  font-family: Georgia, sans-serif;
   line-height: 1.5;
-]
+}
 
 img {
   width: 100%;
@@ -26,14 +26,14 @@ nav {
   font-family: "Patua One", sans-serif;
 }
 
-nav ol [
+nav ol {
   list-style-type: none;
-]
+}
 
-nav a [
+nav a {
   color: #793284;
   text-decoration: none;
-]
+}
 
 nav a:hover {
   color: #b42885;
